tests/ui/env-macro/option_env-too-many-args.rs
fn main() { option_env!("one", "two"); } //~ ERROR: option_env! takes 1 argument
